--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 						Spring, ASP.net, PHP, Codeigniter, MySQL, SQLServer).
 					</p>
 					<div class="buttons">
-						<a href="./resume/resume.html" class="primary-btn">Lihat CV Saya</a>
+						<a href="./resume" class="primary-btn">Lihat CV Saya</a>
 					</div>
 				</div>
 			</div>
