--- a/resume/index.html
+++ b/resume/index.html
@@ -11,7 +11,8 @@
     <!--========== CSS ==========-->
     <link rel="stylesheet" href="./assets/css/styles.css">
 
-    <title>Riki Resume</title>
+    <title>RIKI - Resume</title>
+    <link rel="shortcut icon" href="../image/favicon.ico" type="image/x-icon" />
 </head>
 
 <body>
