memperbaiki link social media

--- a/resume/index.html
+++ b/resume/index.html
@@ -113,10 +113,10 @@
                     <h2 class="section-title">SOCIAL</h2>
 
                     <div class="social__container bd-grid">
-                        <a href="" target="_blank" class="social__link">
+                        <a href="https://www.linkedin.com/in/rikinotnull/" target="_blank" class="social__link">
                             <i class="bx bxl-linkedin-square social__icon"></i> @rikinotnull
                         </a>
-                        <a href="" target="_blank" class="social__link">
+                        <a href="https://www.instagram.com/rikinotnull/" target="_blank" class="social__link">
                             <i class="bx bxl-instagram social__icon"></i> @rikinotnull
                         </a>
                     </div>
