--- a/resume/index.html
+++ b/resume/index.html
@@ -76,7 +76,7 @@
 
                     <div class="home__container section bd-grid">
                         <div class="home__data bd-grid">
-                            <img src="assets/img/perfil.jpg" alt="profile" class="home__img">
+                            <img src="assets/img/profile.jpeg" alt="profile" class="home__img">
 
                             <h1 class="home__title">RIKI</h1>
                             <h3 class="home__profession">Web developer</h3>
@@ -185,6 +185,9 @@
                             <li class="skills__name">
                                 <span class="skills__circle"></span> JavaScript
                             </li>
+                            <li class="skills__name">
+                                <span class="skills__circle"></span> TypeScript
+                            </li>
                         </ul>
 
                         <ul class="skills__data">
@@ -192,7 +195,7 @@
                                 <span class="skills__circle"></span> Angular
                             </li>
                             <li class="skills__name">
-                                <span class="skills__circle"></span> TypeScript
+                                <span class="skills__circle"></span> ReactJS
                             </li>
                             <li class="skills__name">
                                 <span class="skills__circle"></span> Java
@@ -220,7 +223,7 @@
 
                             <div class="experience__data bd-grid">
                                 <h3 class="experience__title">Senior Front-end</h3>
-                                <span class="experience__company">2020 - sekarang | PT Cyberindo Sinergi Sistem</span>
+                                <span class="experience__company">2019 - sekarang | PT Cyberindo Sinergi Sistem</span>
                                 <p class="experience__description">
                                     Membangun antarmuka aplikasi menggunakan framework Angular sesuai dengan dokumentasi
                                     API yang
@@ -238,10 +241,10 @@
 
                             <div class="experience__data bd-grid">
                                 <h3 class="experience__title">Software Engineering</h3>
-                                <span class="experience__company">2019 - 2020 | PT Kinarya Alihdaya Mandiri</span>
+                                <span class="experience__company">2019 | PT Kinarya Alihdaya Mandiri</span>
                                 <p class="experience__description">
-                                    Outsourcing untuk penempatan di Telkomsel. Membangun aplikasi ANT menggunakan
-                                    CodeIgniter 3 dan database MariaDB sesuai dengan permintaan telkomsel. Berkomunikasi
+                                    Membangun aplikasi ANT menggunakan
+                                    CodeIgniter 3 dan database MariaDB sesuai dengan permintaan Telkomsel. Berkomunikasi
                                     dengan para vendor tentang kendala aplikasi dan membuat API untuk vendor.
                                 </p>
                             </div>
@@ -258,7 +261,7 @@
                                 <span class="experience__company">2018 - 2019 | Thamrin Brothers</span>
                                 <p class="experience__description">
                                     Mengolah data SAMSAT dengan excel untuk menghasilkan data perbandingan
-                                    penjualan motor/mobil. Data tersebut akan digunakan untuk melakukan forecasting
+                                    penjualan motor/mobil yang digunakan untuk melakukan forecasting
                                     dan mengkategorikan customer ke level tertentu.
                                 </p>
                             </div>
@@ -291,12 +294,6 @@
                                 Prima Indonesia dengan IPK 3.71</div>
                         </div>
                         <div class="certificate__content">
-                            <h3 class="certificate__title">Technopreneurship Menuju Era Ekonomi Digital Ancaman atau
-                                Peluang (2017)</h3>
-                            <div class="certificate__description">Seminar nasional tentang era ekonomi digital dengan
-                                pembicara Edy Tan selaku Vice President | Region Head Gojek</div>
-                        </div>
-                        <div class="certificate__content">
                             <h3 class="certificate__title">Juara 1 Kompetisi Film Pendek 2014 Palembang (2014)</h3>
                             <div class="certificate__description">Juara 1 Kompetisi Film Pendek 2014 tingkat kabupaten
                                 yang diadakan UBM dan Kompas TV</div>
@@ -314,7 +311,7 @@
                 <section class="references section" id="references">
                     <h2 class="section-title">References</h2>
 
-                    <div class="references__container bg-grid">
+                    <div class="references__container bd-grid">
                         <div class="references__content bd-grid">
                             <span class="references__subtitle">Senior IT Specialist BCA</span>
                             <h3 class="references__title">Jlius Suweno</h3>
@@ -323,11 +320,19 @@
                                 <li>Email: jliuss@live.com</li>
                             </ul>
                         </div>
+                        <div class="references__content bd-grid">
+                            <span class="references__subtitle">Staff IT ASM</span>
+                            <h3 class="references__title">Andre Situmorang</h3>
+                            <ul class="references__contact">
+                                <li>Phone: +6282371789986</li>
+                                <li>Email: andresitumorang236@gmail.com</li>
+                            </ul>
+                        </div>
                     </div>
                 </section>
 
                 <!--========== LANGUAGES ==========-->
-                <section class="languages section">
+                <!-- <section class="languages section">
                     <h2 class="section-title">Languages</h2>
 
                     <div class="languages__container">
@@ -341,7 +346,7 @@
                             </li>
                         </ul>
                     </div>
-                </section>
+                </section> -->
 
                 <!--========== INTERESTS ==========-->
                 <section class="interests section">
