remove reference, change to language

--- a/resume/index.html
+++ b/resume/index.html
@@ -308,7 +308,7 @@
                 </section>
 
                 <!--========== REFERENCES ==========-->
-                <section class="references section" id="references">
+<!--                 <section class="references section" id="references">
                     <h2 class="section-title">References</h2>
 
                     <div class="references__container bd-grid">
@@ -329,10 +329,10 @@
                             </ul>
                         </div>
                     </div>
-                </section>
+                </section> -->
 
                 <!--========== LANGUAGES ==========-->
-                <!-- <section class="languages section">
+                <section class="languages section">
                     <h2 class="section-title">Languages</h2>
 
                     <div class="languages__container">
@@ -346,7 +346,7 @@
                             </li>
                         </ul>
                     </div>
-                </section> -->
+                </section>
 
                 <!--========== INTERESTS ==========-->
                 <section class="interests section">
