--- a/resume/index.html
+++ b/resume/index.html
@@ -82,7 +82,7 @@
                             <h3 class="home__profession">Web developer</h3>
 
                             <div>
-                                <a href="assets/pdf/riki.pdf" download="" class="home__button-movil">Download</a>
+                                <a href="assets/img/riki.pdf" download="" class="home__button-movil">Download</a>
                             </div>
                         </div>
 
