--- a/resume/index.html
+++ b/resume/index.html
@@ -84,7 +84,7 @@
                 />
 
                 <h1 class="home__title">RIKI</h1>
-                <h3 class="home__profession">Web developer</h3>
+                <h3 class="home__profession">Fullstack</h3>
 
                 <div>
                   <a
@@ -152,7 +152,7 @@
 
             <p class="profile__description">
               Riki, 27 tahun. Senior Fullstack di PT Enam Dua Teknologi.
-              Domisili di Jakarta Pusat, DKI Jakarta, Indonesia.
+              Domisili di Jakarta Selatan, DKI Jakarta, Indonesia.
             </p>
           </section>
 
